# InsightFlow

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
examples/: quickstart.py  uplift_demo.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  hooks.ts  index.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: CreateExperiment.tsx  Layout.tsx  Plot.tsx  ui.tsx
frontend/src/pages/: DashboardPage.tsx  ExperimentPage.tsx
infra/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
insightflow/: __init__.py
insightflow/api/: __init__.py  cache.py  config.py  database.py  main.py  models.py  schemas.py  service.py
insightflow/core/: __init__.py  bayesian.py  frequentist.py  multiple_testing.py  power_analysis.py  randomization.py  results.py  sequential.py  srm_detector.py
insightflow/reporting/: __init__.py  insight_generator.py  pdf_exporter.py  report_generator.py  scheduler.py  visualizations.py
insightflow/uplift/: __init__.py  segment_analyzer.py  shap_analysis.py  synthetic_validator.py  x_learner.py
tests/: test_api.py  test_bayesian.py  test_frequentist.py  test_multiple_testing.py  test_power_analysis.py  test_randomization.py  test_reporting.py  test_sequential.py  test_srm_detector.py  test_uplift.py  test_validation.py
validation/: __init__.py  simulation_harness.py
