[project]
name = "insightflow"
version = "0.1.0"
description = "Production-grade A/B testing and statistical experimentation platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kunal Pasad" }]
keywords = ["ab-testing", "experimentation", "statistics", "causal-inference", "data-science"]

# Core statistical engine dependencies (Phase 1-2).
# Web, ML, and reporting extras are added in their own phases to keep installs lean.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pandas>=2.1",
]

[project.optional-dependencies]
# The HTTP service layer (Phase 3). Install with:  pip install -e ".[api]"
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "psycopg[binary]>=3.1",       # PostgreSQL driver (SQLite needs no driver)
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",                # required by FastAPI's TestClient
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["insightflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
